# autosubmit

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pylintrc  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  CHANGES  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README  README.md  README_PIP.md  SECURITY.md  VERSION  a29z_20200324_1027.pdfn  environment.yml  mkdosc.yml  pyproject.toml  pytest.ini  requeriments.txt  setup.py  simple_test.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yaml  codeql.yml  docker.yaml  lint.yml  main.yaml
.gitlab/issue_templates/: BugReport.md  Default.md  FeatureProposal.md  bug_report.md  template.md
autosubmit/: Autosubmit.py  __init__.py  autosubmit.py  dir_config.py  finalise_exp.py  log.py
autosubmit/config/: __init__.py  basicConfig.py  basicconfig.py  config_common.py  config_parser.py  configcommon.py  dir_config.py  log.py  parser_factory.py  yaml_parser.py  yamlparser.py
autosubmit/database/: __init__.py  db_common.py  db_jobdata.py  db_manager.py  db_structure.py  session.py  tables.py
autosubmit/date/: chunk_date_lib.py
autosubmit/experiment/: __init__.py  detail_updater.py  experiment_common.py  statistics.py
autosubmit/git/: __init__.py  autosubmit_git.py  git_common.py
autosubmit/helpers/: __init__.py  autosubmit_helper.py  data_transfer.py  parameters.py  processes.py  utils.py
autosubmit/history/: experiment_history.py  experiment_status.py  internal_logging.py  logging.py  slurm_parser.py  strategies.py  test.py  test_strategies.py  tests.py  utils.py
autosubmit/job/: __init__.py  job.py  job_common.py  job_dict.py  job_grouping.py  job_headers.py  job_list.py  job_list_persistence.py  job_package.py  job_package_persistence.py  job_packager.py  job_packages.py  job_utils.py  metrics_processor.py
autosubmit/log/: __init__.py  log.py  utils.py
autosubmit/migrate/: migrate.py
autosubmit/monitor/: diagram.py  monitor.py  utils.py
autosubmit/notifications/: mail_notifier.py  notifier.py
autosubmit/profiler/: __init__.py  profiler.py
autosubmit/provenance/: rocrate.py
autosubmit/queue/: arqueue.py  ecqueue.py  elqueue.py  hpcqueue.py  htqueue.py  itqueue.py  lgqueue.py  lsfqueue.py  mn3queue.py  mnqueue.py  pbsqueue.py  psqueue.py  sgequeue.py  slurmqueue.py
autosubmit/scripts/: autosubmit.py  bin_autosubmit.py
conf/: archdef.conf  autosubmit.conf  autosubmit.sql  bsc.conf  ecmwf.conf  expdef.conf  incldef.conf
docker/: Dockerfile  README.md  docker-compose.yml
dockerfiles/: Dockerfile  README.md  test.sh
docs/: Makefile  README.md  __init__.py  dev.rst  howto.rst  index.rst  platform.yml  requirements.txt
easybuild/: README.md
log/: ErrorCodeList  ErrorCodeList.txt  log.py
postp/: README  common_ocean_post.txt  ocean_pp.sh
scripts/: pg_migrate.py  script_log_compression.py
src/: autosubmit.py  autosubmit.sql  change_pkl.py  check_compatibility.py  check_exp.py  check_ithaca.bash  chunk_date_lib.py  config_common.py  config_parser.py  create_exp.py  dir_config.py  expid.py  finalise_exp.py  kickstartexp.sh  log.setup  lstexp  monitor.py  recovery.py  register_exp.py  setupexp.sh  statistics.py
templates/: bsc.conf  ecmwf.conf  ithaca.conf  lindgren.conf  marenostrum3.conf
test/: __init__.py  conftest.py  run_unit_suite.py
(+898 files in other folders)
